# hyprswitch

./: Cargo.toml
src/: main.rs
