[package]
name = "hyprswitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
hyprland = "0.4.0-alpha.0"
serde_json = "1.0"
toml = "0.8.8"
serde = "1.0"
clap = { version = "4.0", features = ["derive"] }
